# llm-redact

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  config.example.toml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  live.yml  release.yml  scorecard.yml
Formula/: llm-redact.rb
bench/fp_corpus/: MANIFEST.toml  README.md  synthetic_agentstack.env  synthetic_code.py  synthetic_config.yaml  synthetic_eu_document.txt  synthetic_k8s.yaml  synthetic_runbook.md  synthetic_terraform.tf  synthetic_web3.ts
deploy/: grafana-dashboard.json  k8s-sidecar.yaml  prometheus-alerts.yml  prometheus-scrape.yml
deploy/helm/llm-redact/: .helmignore  Chart.yaml  values.yaml
deploy/helm/llm-redact/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: CLA.md  CONTRIBUTING.md  README.md  RELEASING.md  SBOM.md  SECURITY.md  api-coverage.md  assurance.md  coding-standards.md  compaction-relink.md  dashboard.md  dependencies.md  deployment.md  detection.md  editions.md  fips.md  history-hygiene.md  how-it-works.md  ner-landscape.md  observability.md  plugins.md  privacy.md  providers.md  quickstart.md  resilience.md  security-dataflows.md  security-review-3.1.md  security-review.md  security-testing.md  threat-model.md  troubleshooting.md  versioning.md
docs/diagrams/: architecture.mmd  security-gates.mmd  sequence-chat.mmd  sequence-streaming.mmd
examples/: compose-config.toml
plugins/llm-redact/.claude-plugin/: plugin.json
plugins/llm-redact/commands/: audit.md  config-edit.md  config-show.md  doctor.md  guide.md  preview.md  recent.md  sessions.md  status.md  users.md
scripts/: capture_plugin_screenshots.py  capture_screenshots.py  complexity_allowlist.py  complexity_gate.py  container_smoke.sh  dogfood_claude.py  fake_upstream.py  history_sweep.py  install.sh  live_smoke.py  mutation_equivalents.py  mutation_gate.py  oracle_smoke.sh  plugin_e2e.py  render_diagrams.sh  render_plugins.py  render_user_guide.py  update_formula.py
src/llm_redact/: __init__.py  __main__.py  audit.py  audit_s3.py  cli.py  cloud_detect.py  completions.py  config.py  config_write.py  dashboard.html  doctor_cli.py  eventstream.py  fips.py  free_defaults.py  init_cli.py  jsonwalk.py  license_cli.py  licensing.py  log.py  metrics.py  multipart.py  ndjson.py  placeholders.py  plugin_api.py  plugin_assets.py  plugin_cli.py  proxy.py  realtime.py  redactor.py  registry.py  rehydrate.py  run_cli.py  service_cli.py  sessions.py  sse.py  user_guide.html  user_guide.md  users.py  vault.py  vault_cli.py  (+2 more)
src/llm_redact/bench/: __init__.py  __main__.py  corpus.py  fp_scan.py  latency.py  metrics.py
src/llm_redact/detection/: __init__.py  base.py  deny.py  engine.py  gliner_ner.py  hf_ner.py  ner.py  presidio_ner.py  regex_rules.py  stanza_ner.py  validators.py  wallet_checksums.py
src/llm_redact/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  bedrock.py  claude_vertex.py  cohere.py  custom.py  gemini.py  ollama.py  openai.py  openai_responses.py  vertex.py
tests/: conftest.py  fake_cipher.py  license_fixtures.py  test_api_coverage.py  test_audit_required.py  test_bench.py  test_canary_leak.py  test_cli_status.py  test_cli_tools.py  test_cli_vault.py  test_cloud_detect.py  test_codec_fuzz.py  test_codec_mutation_kills.py  test_complexity_gate.py  test_config.py  test_config_endpoint.py  test_config_write.py  test_coverage_gaps.py  test_coverage_tail.py  test_custom_providers.py  test_custom_validators.py  test_dashboard.py  test_deny.py  test_dependencies_doc.py  test_deploy_assets.py  test_detection_scope.py  test_detectors.py  test_docs_index.py  test_doctor.py  test_events_endpoint.py  test_eventstream.py  test_fips_posture.py  test_free_alone.py  test_gliner.py  test_jsonwalk.py  test_language_scope.py  test_latency_bench.py  test_licensing.py  test_live.py  test_log.py  (+58 more)
